Benchmark updates (#29)
* Support increasing keys (vs randomly distributed keys) in benchmarks
* updating run.sh to output a summary csv